# bosch-biometric-mlops

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/infrastructure/: azure.yaml
configs/model/: fingerprint_only.yaml  multimodal_cnn.yaml
configs/training/: debug.yaml  default.yaml
docs/: ARCHITECTURE.md  BOTTLENECK_ANALYSIS.md
scripts/: benchmark_dataloader.py  infer.py  preprocess.py  train.py
src/biometric/: __init__.py
src/biometric/data/: __init__.py  arrow_store.py  datamodule.py  dataset.py  preprocessing.py  transforms.py  utils.py
src/biometric/inference/: __init__.py  predictor.py
src/biometric/models/: __init__.py  fingerprint_encoder.py  fusion.py  iris_encoder.py  multimodal_net.py
src/biometric/training/: __init__.py  callbacks.py  metrics.py  trainer.py
src/biometric/utils/: __init__.py  reproducibility.py
tests/: conftest.py  test_dataset.py  test_inference.py  test_model.py  test_preprocessing.py  test_trainer.py  test_transforms.py
